[chromium] Drawing an accelerated canvas onto itself is slow. https://bugs.webkit.org/show_bug.cgi?id=83295

Fixed by using a GPU-side deepCopy() in skia, so we don't trigger a
readback and re-upload.

Reviewed by James Robinson.

Correctness is covered by existing tests. Performance is covered
by the test case attached to the bug.

* platform/graphics/skia/ImageSkia.cpp:
(WebCore::BitmapImageSingleFrameSkia::create):


Canonical link: https://commits.webkit.org/100706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113373 268f45cc-cd09-0410-ab3c-d52691b4dbfc